Fix: fix header issue in dark mode

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,20 @@ img {
   color: white;
 }
 
+@media (prefers-color-scheme: light) {
+  body {
+      background: white;
+      color: black;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+      background: black;
+      color: white;
+  }
+}
+
 .toggle-button {
   background-color: black;
   color: white;
@@ -44,14 +58,6 @@ img {
 
 .toggle-button-light {
   background-color: white;
-  color: black;
-}
-
-.headers {
-  color: black;
-}
-
-.headers:hover {
   color: black;
 }
 
